NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NAOCAP_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_PO_Number__c</fullName>
    <formula>NATT_Order__r.NATT_Purchase_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAOCAP PO Number</label>
    <type>Text</type>
</CustomField>