NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_AmountTotal__c.field-meta.xml
<CustomField>
    <fullName>NATT_AmountTotal__c</fullName>
    <label>Amount Total</label>
    <summarizedField>ShipmentItem.NATT_Amount__c</summarizedField>
    <summaryForeignKey>ShipmentItem.ShipmentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>