NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_AuthorizeDotNetProfileId__c.field-meta.xml
<CustomField>
    <fullName>NATT_AuthorizeDotNetProfileId__c</fullName>
    <formula>NATT_Order__r.Owner:User.Contact.NATT_AuthorizeDotNetProfileId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize.net Profile Id</label>
    <type>Text</type>
</CustomField>