NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_BillOfLading__c.field-meta.xml
<CustomField>
    <fullName>NATT_BillOfLading__c</fullName>
    <description>Bill of Lading number for freight shipments</description>
    <label>Bill of Lading #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>