NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_DateShipped__c.field-meta.xml
<CustomField>
    <fullName>NATT_DateShipped__c</fullName>
    <description>Date the shipment was shipped from the warehouse</description>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>