NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_InvoiceDate__c</fullName>
    <description>Date the invoice was generated</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>