NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>NATT_InvoiceType__c</fullName>
    <description>Indicates the type of invoice</description>
    <label>Invoice Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>