NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_JDE_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Order_Number__c</fullName>
    <formula>NATT_Order__r.NATT_JDE_Sales_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Sales Order Number</label>
    <type>Text</type>
</CustomField>