NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_JdeInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>NATT_JdeInvoiceAmount__c</fullName>
    <description>used to process the Credit Card amount when a shipment is created for TES(instead of the line rollup)</description>
    <label>JDE Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>