NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order to which the shipment is related</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>