NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_OrderOwnerId__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderOwnerId__c</fullName>
    <formula>CASESAFEID(NATT_Order__r.OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner Id</label>
    <type>Text</type>
</CustomField>