NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_OrderWarehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderWarehouse__c</fullName>
    <formula>TEXT(NATT_Order__r.NATT_Warehouse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Warehouse</label>
    <type>Text</type>
</CustomField>