NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_PackingSlipNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_PackingSlipNumber__c</fullName>
    <description>Packing slip number of the shipment</description>
    <label>Packing Slip Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>