NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_Payment_Captured__c.field-meta.xml
<CustomField>
    <fullName>NATT_Payment_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in TES to indicate if the payment has been captured.</description>
    <label>Payment Captured</label>
    <type>Checkbox</type>
</CustomField>