NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_ShipmentKeyId__c.field-meta.xml
<CustomField>
    <fullName>NATT_ShipmentKeyId__c</fullName>
    <externalId>true</externalId>
    <label>Shipment Key ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>