NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_ShippingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>NATT_ShippingCompanyName__c</fullName>
    <description>Name of the company transporting the shipment</description>
    <label>Shipping Company Name</label>
    <length>48</length>
    <type>Text</type>
</CustomField>