NATTQA-ENV/force-app/main/default/objects/Shipment/fields/NATT_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Transaction_Id__c</fullName>
    <formula>IF(
				AND(TEXT(NATT_Order__r.NATT_Payment_Instruction__c)==&apos;Credit Card&apos;,NOT(ISBLANK(NATT_Order__r.NATT_Transaction_Id__c)))
				,NATT_Order__r.NATT_Transaction_Id__c,
				&apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Id</label>
    <type>Text</type>
</CustomField>