NATTQA-ENV/force-app/main/default/objects/Shipment/recordTypes/NAOCAP_Shipment.recordType-meta.xml
<RecordType>
    <fullName>NAOCAP_Shipment</fullName>
    <active>true</active>
    <label>NAOCAP Shipment</label>
</RecordType>