NATTQA-ENV/force-app/main/default/objects/Shipment/recordTypes/NATT_Parts_Shipment.recordType-meta.xml
<RecordType>
    <fullName>NATT_Parts_Shipment</fullName>
    <active>true</active>
    <label>NATT Parts Shipment</label>
</RecordType>